@@ -1,3 +1,13 @@
+Tue Apr 25 21:27:05 UTC 2006  William R. Otte <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/TargetManager/TargetManager.mpc
+        
+          Linking problems for Borland. 
+        
+        * tools/Config_Handlers/Package_Handlers/PCD_Handler.cpp
+        * tools/Config_Handlers/Package_Handlers/SID_Handler.cpp
+        
+          More compile fixes for Borland.
 Tue Apr 25 20:12:25 UTC 2006  William R. Otte <wotte@dre.vanderbilt.edu>
 
         * DAnCE/NodeApplication/NodeApplication_Impl.cpp
